--- a/app/views/Admin/About.html
+++ b/app/views/Admin/About.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="col-sm-10">
-    <h3>Stays</h3><a href="/admin/live/stays/create">Add a stay</a>
+    <h3>Stays</h3><a href="/admin/about/stays/create">Add a stay</a>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -31,25 +31,24 @@
         {{range .stays}}{{$place := place .}}
         <tr>
           <td>{{$place.Name}}</td>
-          <td>{{date .StartedAt}}</td>
-          <td>{{date .EndedAt}}</td>
+          <td>{{datetime .StartedAt}}</td>
+          <td>{{datetime .EndedAt}}</td>
           <td><a href="{{.Url}}" target="_blank">Reference</a></td>
           {{if $user.IsAdmin}}
           <td>
-            <a href="/admin/live/stays/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
-            <a href="/admin/live/stays/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
+            <a href="/admin/about/stays/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
+            <a href="/admin/about/stays/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
           </td>{{end}}
         </tr>
         {{end}}
       </tbody>
     </table>
-
   </div>
 </div>
 
 <div class="row">
   <div class="col-sm-5 col-sm-offset-2"><h3>Places</h3></div>
-<div class="col-sm-5"><a href="/admin/live/places/create">Create Location</a></div></div>
+<div class="col-sm-5"><a href="/admin/about/places/create">Create Location</a></div></div>
 <div class="row">
   <div class="col-sm-2 col-sm-offset-2"><strong>Name</strong></div>
   <div class="col-sm-4"><strong>Cover</strong></div>
@@ -61,8 +60,8 @@
   <div class="col-sm-4"><img src="{{.CoverUrl}}" alt="Location Logo"></div>
   {{if $user.IsAdmin}}
   <div class="col-sm-3">
-    <a href="/admin/live/places/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
-    <a href="/admin/live/places/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
+    <a href="/admin/about/places/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
+    <a href="/admin/about/places/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
   </div>{{end}}
 </div>
 {{end}}
