--- a/app/views/Admin/EditProject.html
+++ b/app/views/Admin/EditProject.html
@@ -43,6 +43,7 @@
 				<textarea class="form-control" id="textarea" name="project.Description" rows="5">{{.project.Description}}</textarea>
 			</div>
 
+			<input type="hidden" name="project.Id" value="{{.project.Id}}" />
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
