--- a/app/views/Admin/EditStay.html
+++ b/app/views/Admin/EditStay.html
@@ -10,7 +10,7 @@
 	<div class="col-sm-10 col-sm-offset-2">
 		<ol class="breadcrumb">
 		  <li><a href="/admin">Admin Panel</a></li>
-      <li><a href="/admin/live/">Live</a></li>
+      <li><a href="/admin/about/">About</a></li>
 		  <li class="active">{{.title}}</li>
 		</ol>
 	</div>
@@ -23,7 +23,7 @@
 
 	<div class="col-sm-8">
 		<h3>{{.title}}</h3>
-		<form role="form" method="POST" action="/admin/live/stays/{{.stay.Id}}">
+		<form role="form" method="POST" action="/admin/about/stays/{{.stay.Id}}">
 			<div class="form-group">
 				<label for="selectorStay">Place</label>
         <select class="form-control" id="selectorStay" name="stay.PlaceId">
