--- a/app/views/Admin/EditPost.html
+++ b/app/views/Admin/EditPost.html
@@ -1,29 +1,24 @@
-{{if eq .post.Id -1}}
-{{set . "title" "Create a new Post"}}
-{{else}}
-{{set . "title" "Edit Post"}}
-{{end}}
-
+{{if eq .post.Id -1}}{{set . "title" "Create a new Post"}}{{else}}{{set . "title" "Edit Post"}}{{end}}
 {{append . "moreScripts" "/public/js/Markdown.Converter.js"}}
 {{append . "moreScripts" "/public/js/Markdown.Extra.js"}}
 {{append . "moreScripts" "//cdn.jsdelivr.net/ace/1.1.9/min/ace.js"}}
 {{template "header.html" .}}
-
 <div class="row">
 	<div class="col-sm-12">
 		<ol class="breadcrumb">
-		  <li><a href="/admin">Admin Panel</a></li>
-		  <li class="active">{{.title}}</li>
+			<li><a href="/admin">Admin Panel</a></li>
+			<li class="active">{{.title}}</li>
 		</ol>
 	</div>
 </div>
 <div class="row">
-	{{/*<div class="col-sm-2">
-		{{set . "pp" 1}}
-		{{template "Admin/adminMenu.html" .}}
+	{{/*
+	<div class="col-sm-2">
+		{{set . "pp" 1}} {{template "Admin/adminMenu.html" .}}
 	</div>*/}}
 	<div class="col-sm-6">
-		{{/*<h3>{{.title}}</h3>*/}}
+		{{/*
+		<h3>{{.title}}</h3>*/}}
 		<form role="form" method="POST" action="/admin/post/{{.post.Id}}">
 			<div class="form-group">
 				<label for="inputTitle">Post Title</label>
@@ -39,57 +34,65 @@
 					<input type="checkbox" name="post.Published" value="true" {{if .post.Published}}checked{{end}} /> Published (publicly visible)
 				</label>
 			</div>
+			<div class="form-group">
+				<label for="inputCreatedAt">Creation Date (Used for sorting)</label>
+				<input type="text" class="form-control" id="inputCreatedAt" name="post.CreatedAt" placeholder="2015.01.20" value="{{date .post.CreatedAt}}" />
+			</div>
 			<input type="hidden" value="{{.post.Id}}" name="post.Id" />
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
 	<div class="col-sm-6">
 		<div class="panel panel-default">
-		  <div class="panel-heading">
-		    <h2 class="panel-title" id="titlePreview"></h2>
-			<small>By {{.user.Name}}</small>
-		  </div>
-		  <div class="panel-body" id="editorPreview">
-		  </div>
+			<div class="panel-heading">
+				<h2 class="panel-title" id="titlePreview"></h2>
+				<small>By {{.user.Name}}</small>
+			</div>
+			<div class="panel-body" id="editorPreview">
+			</div>
 		</div>
 	</div>
 </div>
 
 <script type="text/javascript">
 	function addEvent(element, event, fn) {
-	    if (element.addEventListener) element.addEventListener(event, fn, false);
-	    else if (element.attachEvent) element.attachEvent('on' + event, fn);
+		if (element.addEventListener) element.addEventListener(event, fn, false);
+		else if (element.attachEvent) element.attachEvent('on' + event, fn);
 	}
 
 	// Initialize the ACE editor
 	var editor = ace.edit("editorACE");
-    editor.setTheme("ace/theme/github");
+	editor.setTheme("ace/theme/github");
 	var session = editor.getSession();
-    session.setMode("ace/mode/markdown");
+	session.setMode("ace/mode/markdown");
 	session.setUseWrapMode(true);
 	session.setWrapLimitRange(70, 70);
 
 	window.onload = function() {
 		// Initialize the markdown preview
 		var converter = new Markdown.Converter();
-		Markdown.Extra.init(converter, {extensions: ["tables", "fenced_code_gfm"]});
+		Markdown.Extra.init(converter, {
+			extensions: ["tables", "fenced_code_gfm"]
+		});
 
 		var preview = $("#editorPreview");
 		var textarea = $("#editorTextarea");
-		var update = function () {
-		    textarea.val(editor.getSession().getValue());
+		var update = function() {
+			textarea.val(editor.getSession().getValue());
 			preview.html(converter.makeHtml(editor.getSession().getValue()));
-			$('pre code').each(function(i, e) {hljs.highlightBlock(e)});
+			$('pre code').each(function(i, e) {
+				hljs.highlightBlock(e)
+			});
 		};
 		editor.getSession().on("change", update);
 		update();
 
 		// Update the Post title
-		$("#inputTitle").keyup(function(){
+		$("#inputTitle").keyup(function() {
 			$("#titlePreview").text($(this).val());
 		});
 		$("#inputTitle").keyup();
-		$(".container").css("max-width", "2000px");// Upscale the container
+		$(".container").css("max-width", "2000px"); // Upscale the container
 	};
 </script>
 {{template "footer.html" .}}
