--- a/app/views/Admin/Media.html
+++ b/app/views/Admin/Media.html
@@ -32,7 +32,7 @@
 		            <td>{{.Name}}</td>
 					<td>{{.Size}} Bytes</td>
 					<td>
-						<a title="View this file" href="/public/uploads/{{urlquery .Name}}" class="btn btn-primary btn-sm">View</a>
+						<a title="View this file" href="/uploads/{{urlquery .Name}}" class="btn btn-primary btn-sm">View</a>
 						<a title="Delete this file" href="/admin/media/{{urlquery .Name}}/delete" class="btn btn-danger btn-sm">Delete</a>
 					</td>
 				</tr>
@@ -60,7 +60,7 @@
 						$("#filesTable tbody").prepend('<tr>'+
 						'<td>'+file.name+'</td>'+
 						'<td>'+file.size+' Bytes</td>'+
-						'<td><a title="View this file" href="/public/uploads/'+enc+'" class="btn btn-primary btn-sm">View</a> '+
+						'<td><a title="View this file" href="/uploads/'+enc+'" class="btn btn-primary btn-sm">View</a> '+
 						'<a title="Delete this file" href="/admin/media/'+enc+'/delete" class="btn btn-danger btn-sm">Delete</a></td>'+
 						'</tr>');
 					});
