--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 /* Copyrigth Simon Peter Grätzer simon(at)graetzer.org */
 
-body {background:url('../img/cream_pixels.png');}
+body {background:url('../patterns/tile.png');}
 #trailer {
 	background:url('../img/trailer.png') no-repeat;
 	background-size: auto 100%;
