fixed about page

--- a/app/views/App/About.html
+++ b/app/views/App/About.html
@@ -5,14 +5,13 @@
 {{template "header.html" .}}
 <div class="row">
 	<div class="col-sm-12 panel panel-default">
-		<p>I’m a 23 year old software developer living in Germany. I started learning programming when I was around 12 years old, I started working as a developer when I was 16. Currently I am mostly concerned with mobile app development for
-			<strong>iOS</strong> and
-			<strong>Android</strong>. I also have an active interest in
+		<p>My name is Simon and I'm a software developer from Germany. I mostly work on mobile app's (<strong>iOS</strong> and
+		<strong>Android</strong>). I also have an active interest in
 			<strong>Computer Graphics</strong>,
 			<strong>Machine Learning</strong> and
-			<strong>web development</strong>. If you want to see what I'm up to you can look at a list of my <a href="/projects" title="Project List">projects</a> or go to my <a href="https://github.com/graetzer/" title="My Github profile">github profile</a>. I am currently
-			working towards my master degree in computer science at the RWTH Aachen University.</p>
-		<p>If you want to get in touch you can see my current approximate location on the map below. Shoot me an email at: simon(at)graetzer.org</p>
+			<strong>Web Development</strong>. If you want to know what I'm up to look at this <a href="/projects" title="Project List">list of projects</a> or go to <a href="https://github.com/graetzer/" title="My Github profile">Github</a>.
+			I am also pursuing a master degree in CS at the RWTH Aachen University. If you want to get in touch shoot me an email at: simon(at)graetzer.org</p>
+		<strong>Some recent trips I went on are visualized here</strong>
 
 		<div class="row">
 			<div class="col-sm-10" id="globe-container"></div>
