Switch to full-screen layout

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -38,5 +38,5 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     {{template "menu.html" .}} {{template "flash.html" .}}
