--- a/app/views/App/Projects.html
+++ b/app/views/App/Projects.html
@@ -18,7 +18,7 @@
 						</div>
 						<div class="col-sm-8">
 							{{markdown .Description}}
-							{{if .RepoUrl}}<a href="{{.RepoUrl}}" title="Repository or project website" target="_blank">More Information</a>{{end}}
+							{{if .RepoUrl}}<a class="btn btn-info" role="button" href="{{.RepoUrl}}" title="Repository or project website" target="_blank">More Information</a>{{end}}
 						</div>
 					</div>
 				</div>
