Fixing the layout

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -27,7 +27,6 @@
 	{{end}}
 </footer>
 {{/*</div>
-{{if eq .RunMode "dev"}} {{template "debug.html" .}} {{end}}
-</body>*/}}
-
+{{if eq .RunMode "dev"}} {{template "debug.html" .}} {{end}}*/}}
+</body>
 </html>
