--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -26,7 +26,7 @@
 	</form>
 	{{end}}
 </footer>
-{{/*</div>
-{{if eq .RunMode "dev"}} {{template "debug.html" .}} {{end}}*/}}
+</div>
+{{/*{{if eq .RunMode "dev"}} {{template "debug.html" .}} {{end}}*/}}
 </body>
 </html>
