--- a/app/views/App/Imprint.html
+++ b/app/views/App/Imprint.html
@@ -7,7 +7,7 @@
         <h3 class="panel-title">Impressum</h3>
       </div>
       <div class="panel-body">
-        <p>Fragen an:
+        <p>Direct inquiries to:
           <em>simon(at)graetzer.org</em>
         </p>
 
