--- a/app/views/App/About.html
+++ b/app/views/App/About.html
@@ -1,32 +1,40 @@
-{{set . "title" .post.Title}}
+{{set . "title" "About"}}
 {{append . "moreScripts" "/public/globe/Detector.js"}}
 {{append . "moreScripts" "/public/globe/three.min.js"}}
 {{append . "moreScripts" "/public/globe/globe.js"}}
 {{template "header.html" .}}
+
 <div class="row">
-	<div class="col-sm-11 panel panel-default">
-		<p>My name is Simon and I'm a software developer from Germany. I mostly work on mobile app's (<strong>iOS</strong> and
-		<strong>Android</strong>). I also have an active interest in
-			<strong>Computer Graphics</strong>,
-			<strong>Machine Learning</strong> and
-			<strong>Web Development</strong>. If you want to know what I'm up to look at this <a href="/projects" title="Project List">list of projects</a> or go to <a href="https://github.com/graetzer/" title="My Github profile">Github</a>.
-			I am also pursuing a master degree in CS at the RWTH Aachen University. If you want to get in touch shoot me an email at: simon(at)graetzer.org</p>
-		<strong>Some recent trips I went on are visualized here</strong>
+	<div class="col-sm-11">
+		<div class="row">
+			<div class="col-sm-2 col-lg-1 hidden-xs">
+				<img src="/public/img/profile.jpg" alt="Profile image" class="img-circle" style="max-width:100%" />
+			</div>
+			<div class="col-sm-10 col-lg-11">
+			  My name is Simon and I'm a software developer from Germany. I mostly work on mobile app's (<strong>iOS</strong> and
+				<strong>Android</strong>). I also have an active interest in
+					<strong>Computer Graphics</strong>,
+					<strong>Machine Learning</strong> and
+					<strong>Web Development</strong>. If you want to know what I'm up to, look at this <a href="/projects" title="Project List">list of projects</a> or go to <a href="https://github.com/graetzer/" title="My Github profile">Github</a>.
+					I am also pursuing a master degree in CS at the RWTH Aachen University.<br/>If you want to get in touch shoot me an email at <strong>simon(at)graetzer.org</strong>
+			</div>
+		</div>
 
 		<div class="row">
-			<div class="col-sm-9" id="globe-container"></div>
-			<div class="col-sm-3" id="stays-list">
-				<h6>Trips &amp; Locations</h6>
+			<div class="col-sm-3 hidden-xs" id="stays-list" style="padding: 10px 15px 0 20px">
+				Trips &amp; Locations
 				{{range .stays}}{{$place := place .}}
 				<div class="row" onclick="javascript:showPlace({{.Id}}, {{$place.Id}})" id="stay-{{.Id}}">
-					<div class="col-xs-5" style="padding:0">
+					<div class="col-xs-4" style="padding:0">
 						<img src="{{$place.CoverUrl}}" alt="Project Logo" class="img-circle" />
 					</div>
-					<div class="col-xs-7">
+					<div class="col-xs-8">
 						<h6><a href="{{.Url}}" target="_blank" title="Pictures of my stay">{{$place.Name}}</a></h6>
-						<small>{{if eqtime .StartedAt .EndedAt}}{{date .StartedAt}}{{else}}{{date .StartedAt}} - {{date .EndedAt}}{{end}}</small>
+						<small>{{if eqtime .StartedAt .EndedAt}}{{date .StartedAt}} - <strong>Now</strong>{{else}}{{date .StartedAt}} - {{date .EndedAt}}{{end}}</small>
 					</div>
 				</div>{{end}}
+			</div>
+			<div class="col-sm-9" id="globe-container">
 			</div>
 		</div>
 	</div>
@@ -39,61 +47,40 @@
 <!-- /.row -->
 <script type="text/javascript">
 	var globe, places, active;
-	if (!Detector.webgl) {
-		Detector.addGetWebGLMessage();
-	} else {
+	window.onload = function() {
+		console.log("onload");
+
 		var container = document.getElementById('globe-container');
+		if (!Detector.webgl) {
+			Detector.addGetWebGLMessage({parent:container});
+		} else {
+			container.style.backgroundImage = "/public/globe/loading.gif";
+			places = JSON.parse('{{json .places}}');
+			var globeImg = new Image();
+			globeImg.onload = function() {
+				// In memory drawing
+				var canvas = document.createElement('canvas');
+				canvas.width = globeImg.width;
+				canvas.height = globeImg.height;
+				var context = canvas.getContext('2d');
+				context.drawImage(globeImg, 0, 0);
+				var worldMap = context.getImageData(0, 0, globeImg.width, globeImg.height);
 
-		container.style.backgroundImage = "/public/globe/loading.gif";
-		places = JSON.parse("{{json .places}}");
-		var globeImg = new Image();
-		globeImg.onload = function() {
-			// In memory drawing
-			var canvas = document.createElement('canvas');
-			canvas.width = globeImg.width;
-			canvas.height = globeImg.height;
-			var context = canvas.getContext('2d');
-			context.drawImage(globeImg, 0, 0);
-			var worldMap = context.getImageData(0, 0, globeImg.width, globeImg.height);
-
-			// Visualize sampling pattern
-			/*var data = worldMap.data, xx = 0, ys, yy;
-			for (y = 0; y < worldMap.height; y += 5) {
-				ys = y / worldMap.height;
-	      x = 0;
-	      if (0.123 < ys && ys < 0.72) step = 5;
-	      else {
-	        if (ys <= 0.123) {// 2^(3 + distBorder) at least 8, doubles every 5 px
-	          step = Math.floor(Math.pow(2, (0.123 * worldMap.height - y) / 5) + 3);
-	        } else {
-	          step = Math.floor(Math.pow(2, (y - 0.72*worldMap.height) / 10) + 3);
-	        }
-	        x = Math.floor(step);
-	      }
-
-	      for (x = 0; x < worldMap.width; x += step) {
-	        i = (y * worldMap.width + x) * 4;
-					data[i] = 0;
-					data[i + 1] = 255;
-					data[i + 2] = 255;
-					xx++;
-	      }
-	    }
-			console.log("%d nodes", xx);
-			context.putImageData(worldMap, 0, 0);
-			container.appendChild(canvas);//*/
-			var opts = {};
-			//{{if .stays}}{{$place := index .stays 0 | place}}
-			opts.lat = parseFloat("{{$place.Latitude}}");
-			opts.lng = parseFloat("{{$place.Longitude}}");
-			//{{end}}
-			globe = new DAT.Globe(container, opts);
-			globe.setData(worldMap, places);
-			globe.animate();
-			container.style.backgroundImage = 'none'; //*/
-		};
-		globeImg.src = "/public/globe/globe.png";
-	}
+				var opts = {};
+				//{{if .stays}}{{$stay := index .stays 0}}{{$place := place $stay}}
+				opts.lat = parseFloat("{{$place.Latitude}}");
+				opts.lng = parseFloat("{{$place.Longitude}}");
+				active = $('#stay-{{$stay.Id}}');
+				active.addClass("active");
+				//{{end}}
+				globe = new DAT.Globe(container, opts);
+				globe.setData(worldMap, places);
+				globe.animate();
+				container.style.backgroundImage = 'none'; //*/
+			};
+			globeImg.src = "/public/globe/globe.png";
+		}
+	};
 
 	function showPlace(stayId, placeId) {
 		var place;
@@ -109,38 +96,4 @@
 		active.addClass("active");
 	}
 </script>
-<style type="text/css">
-	#globe-container {
-		padding-left: 0px;
-		padding-right: 0px;
-		border-right: 1px solid #DDD;
-	}
-
-	#stays-list img {
-		width: 100%;
-	}
-
-	#stays-list {
-		padding: 5px 20px 5px 20px;
-	}
-
-	#stays-list .row {
-		padding-top: 5px;
-		border-radius: 4px;
-	}
-
-	#stays-list .row:hover {
-		background-color: #EEE;
-	}
-
-	#stays-list .row.active,
-	#stays-list .row.active a {
-		color: #fff;
-		background-color: #337AB7;
-	}
-
-	canvas {
-		background-color: #fff;
-	}
-</style>
 {{template "footer.html" .}}
