--- a/app/views/App/social.html
+++ b/app/views/App/social.html
@@ -1,8 +1,22 @@
-<aside id="social">
-<ul class="list-unstyled">
-  <li><a href="https://github.com/graetzer/" title="Simon Grätzer's' Github profile"><img src="/public/img/github.png" alt="Github" /></a></li>
-  <li><a href="https://twitter.com/ciron" title="Simon Grätzer's' Twitter profile"><img src="/public/img/twitter.png" alt="Twitter" /></a></li>
-  <li><a href="https://www.facebook.com/simon.graetzer" title="Simon Grätzer's' Facebook profile"><img src="/public/img/facebook.png" alt="Facebook" /></a></li>
-  <li><a href="https://instagram.com/sgraetzer" title="Instagram profile"><img src="/public/img/instagram.png" alt="Instagram" /></a></li>
-</ul>
-</aside>
+<div class="row" id="social">
+  <div class="col-xs-3 col-sm-12">
+    <a href="https://github.com/graetzer/" title="Simon Grätzer's' Github profile">
+      <img src="/public/img/github.png" alt="Github" />
+    </a>
+  </div>
+  <div class="col-xs-3 col-sm-12">
+    <a href="https://twitter.com/ciron" title="Simon Grätzer's' Twitter profile">
+      <img src="/public/img/twitter.png" alt="Twitter" />
+    </a>
+  </div>
+  <div class="col-xs-3 col-sm-12">
+    <a href="https://www.facebook.com/simon.graetzer" title="Simon Grätzer's' Facebook profile">
+      <img src="/public/img/facebook.png" alt="Facebook" />
+    </a>
+  </div>
+  <div class="col-xs-3 col-sm-12">
+    <a href="https://instagram.com/sgraetzer" title="Instagram profile">
+      <img src="/public/img/instagram.png" alt="Instagram" />
+    </a>
+  </div>
+</div>
