--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -15,7 +15,7 @@
     <ul class="nav navbar-nav">
       <!--<li><a href="/about">About</a></li>-->
       <li {{if .stays}}class="active"{{end}}><a href="/about">About</a></li>
-      <li {{if .projects}}class="active"{{end}}><a href="/projects">Projects</a></li>
+      <li {{if .projects}}class="active"{{end}}><a href="/projects">Work</a></li>
       <li><a href="/imprint">Imprint</a></li>
   	  {{if .user}}
   	  <li><a href="/admin">Admin Panel</a></li>
