--- a/app/views/App/About.html
+++ b/app/views/App/About.html
@@ -12,11 +12,11 @@
 			</div>
 			<div class="col-sm-10 col-lg-11">
 			  My name is Simon and I'm a software developer from Germany. I mostly work on mobile app's (<strong>iOS</strong> and
-				<strong>Android</strong>). I also have an active interest in
+				<strong>Android</strong>), but I also have an active interest in
 					<strong>Computer Graphics</strong>,
 					<strong>Machine Learning</strong> and
 					<strong>Web Development</strong>. If you want to know what I'm up to, look at this <a href="/projects" title="Project List">list of projects</a> or go to <a href="https://github.com/graetzer/" title="My Github profile">Github</a>.
-					I am also pursuing a master degree in CS at the RWTH Aachen University.<br/>If you want to get in touch shoot me an email at <strong>simon(at)graetzer.org</strong>
+					I am currently pursuing a master degree in Computer Science at the RWTH Aachen University.<br/>If you want to get in touch shoot me an email at <strong>simon(at)graetzer.org</strong>
 			</div>
 		</div>
 
