--- a/app/views/App/About.html
+++ b/app/views/App/About.html
@@ -7,10 +7,10 @@
 <div class="row">
 	<div class="col-sm-11">
 		<div class="row">
-			<div class="col-sm-2 col-lg-1 hidden-xs">
+			<div class="col-xs-3 col-sm-2 col-lg-1">
 				<img src="/public/img/profile.jpg" alt="Profile image" class="img-circle" style="max-width:100%" />
 			</div>
-			<div class="col-sm-10 col-lg-11">
+			<div class="col-xs-9 col-sm-10 col-lg-11">
 			  My name is Simon and I'm a software developer from Germany. I mostly work on mobile app's (<strong>iOS</strong> and
 				<strong>Android</strong>), but I also have an active interest in
 					<strong>Computer Graphics</strong>,
