--- a/app/views/App/Imprint.html
+++ b/app/views/App/Imprint.html
@@ -1,5 +1,5 @@
-{{set . "title" .post.Title}} {{template "header.html" .}}
-
+{{set . "title" .post.Title}}
+{{template "header.html" .}}
 <div class="row">
   <div class="col-sm-11">
     <div class="panel panel-default">
