--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Simon Peter Grätzer" />
-  <meta name="keywords" content="{{if .title}}{{.}}{{else}}iOS, Android, Go, GoLang, Java, OpenGL, C++{{end}}" />
+  <meta name="keywords" content="{{if .title}}{{.title}}{{else}}iOS, Android, Go, GoLang, Java, OpenGL, C++{{end}}" />
   <meta name="description" content="A blog on iOS, Android, GoLang, 3D Graphics and similar topics" />
 
   <link rel="shortcut icon" type="image/png" href="/public/img/favicon.png" />
